Sun Aug 31 16:57:36 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_putback): associate encoding to the result.

Sun Aug 31 16:43:56 2008  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/intern.h: rename RB_UBF_DFL to
	  RUBY_UBF_IO and RUBY_UBF_PROCESS.
	  Because there is no default (universal) unblocking function.

	* ext/socket/socket.c, file.c, io.c, process.c, thread.c: ditto.

Sun Aug 31 16:42:23 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_insert_output): raise ArgumentError on failure.

Sun Aug 31 16:39:17 2008  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_thread.rb: add a test.

Sun Aug 31 16:34:41 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/single_byte.trans (us_ascii_map): don't define 8bit bytes.

Sun Aug 31 14:27:27 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_last_error): new method.

Sun Aug 31 14:17:34 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_primitive_convert): make two arguments,
	  destination_byteoffset and destination_bytesize, optional.

Sun Aug 31 14:12:06 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (make_econv_exception): error message simplified.

Sun Aug 31 13:47:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/coverage/coverage.c (rb_mCoverage): removed unneeded static variable.

	* ext/socket/socket.c (unix_recv_io): ditto.

	* ext/socket/socket.c (mConst): ditto.

Sun Aug 31 13:45:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_ocsp.c (ossl_ocspres_initialize): fix for
	  initialization of r18168.

Sun Aug 31 13:42:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/ripper/eventids2.c (ripper_init_eventids2): use rb_intern_const.

	* ext/ripper/tools/generate.rb (generate_eventids1): ditto.

	* ext/ripper/tools/generate.rb (generate_eventids2_table): ditto.

Sun Aug 31 12:56:00 2008  Tanaka Akira  <akr@fsij.org>

	* ext/dl/mkcallback.rb (rb_dl_init_callbacks): fix indent.

Sun Aug 31 11:39:21 2008  Tanaka Akira  <akr@fsij.org>
